/* eslint-disable camelcase */
/* eslint-disable max-len */
/* eslint-disable require-jsdoc */
class Posting {
  id;
  userId;
  counterId;
  daddy_baby;
  dining_price;
  cash_price;
  exchange_rate;
  post_time;
  expire_time;
  comment;
  status;
  // constructor(
  //     id,
  //     userId,
  //     counterId,
  //     daddy_baby,
  //     dining_price,
  //     cash_price,
  //     exchange_rate,
  //     post_time,
  //     expire_time,
  //     comment,
  //     status,
  // ) {
  //   this.id = id;
  //   this.userId = userId;
  //   this.counterId = counterId;
  //   this.daddy_baby = daddy_baby;
  //   this.dining_price = dining_price;
  //   this.cash_price = cash_price;
  //   this.exchange_rate = exchange_rate;
  //   this.post_time = post_time;
  //   this.expire_time = expire_time;
  //   this.comment = comment;
  //   this.status = status;
  // };
  test() {
    return 'test';
  }
}

export default Posting;
